fixed project images overflowing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2205,6 +2205,7 @@
 			box-shadow: none !important;
 			margin: 0 0 2em 0;
 			padding: 0 !important;
+			overflow: hidden;
 		}
 
 		.box.features .features-row {
